--- a/public/front-assets/style.css
+++ b/public/front-assets/style.css
@@ -279,8 +279,9 @@ width: 300px;
 }
 /* DETAIL PAGE */
 #main-img img{
-width: 400px;
-    height: 300px;
+width: 500px;
+    height: 350px;
+
     border-radius: 10px;
 }
 .detail-text{
@@ -313,27 +314,28 @@ color: black;
 }
 #main-two img{
     border-radius: 10px;
-width: 130px;
+width: 162px;
 display: flex;
-padding: 5px   ;
+height: 150px;
+
+
 }
 #main-two{
-margin: 18px;
-
+  margin-top: 10px;
+  margin-left: 2px;
 }
 
 .classic{
 margin-left: 20px;
 font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-
+#p-des{
+margin-left: 20px;
+}
 .svg{
 text-align: right;
 }
-.feature{
-margin-left: 80px;
 
-}
 
 /* USER REGISTER */
 /* USER REGISTER */
