--- a/public/front-assets/style.css
+++ b/public/front-assets/style.css
@@ -6,6 +6,9 @@
 
 }
 
+        body {
+background: #C5B19E !important;
+        }
 .logo {
     width: 70px;
     height: 70px;
@@ -279,11 +282,25 @@ width: 300px;
 }
 /* DETAIL PAGE */
 #main-img img{
-width: 500px;
-    height: 350px;
+width: 100%;
+    height: 410px;
 
     border-radius: 10px;
 }
+        #main-two img {
+            border-radius: 8px;
+            width: 150px;
+            height: 130px;
+
+        }
+
+        #main-two {
+            margin: 6px;
+        }
+
+        .main-two-container {
+            margin-left: -20px;
+        }
 .detail-text{
 font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
@@ -293,52 +310,34 @@ border: none;
 border-radius: 20px;
 background-color: #A27F61;
 padding: 10px;
-margin-top: 60px;
+margin-top: 15px;
 width: 200px;
 }
 .addtocart  a{
 text-decoration: none;
 color: black;
 }
-.buynow a {
-    text-decoration: none;
-    color: black;
+.addtocart a:hover{
+color: #8b603b;
 }
-.buynow {
-    border: none;
-    margin-top: 10px;
-    border-radius: 20px;
-    background-color:#E5DCC8;
-    padding: 10px;
-    width: 200px;
-}
-#main-two img{
-    border-radius: 10px;
-width: 162px;
-display: flex;
-height: 150px;
+.material{
 
-
+margin-left: 100px
 }
-#main-two{
-  margin-top: 10px;
-  margin-left: 2px;
-}
-
 .classic{
-margin-left: 20px;
-font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-#p-des{
-margin-left: 20px;
-}
-.svg{
-text-align: right;
+    padding: 5px;
+color: #8b603b;
 }
 
+.compare{
 
-/* USER REGISTER */
-/* USER REGISTER */
+font-family: monospace;
+margin-left: 300px;
+}
+.star i{
+font-size: 20px;
+color: rgb(255, 242, 4);
+}
 /* USER LOGIN */
 .box {
     position: relative;
@@ -646,4 +645,130 @@ background-color: #A27F61 !important;
 color: black;
 padding: 10px;
 border-radius:10px ;
+}
+/* ABOUT */
+/* about */
+#newwholebanner {
+    width: 100%;
+    justify-content: center;
+    text-align: center;
+
+}
+
+#abouty {
+    text-align: center;
+    margin-top: 265px !important;
+}
+
+#aboto {
+    height: 50px;
+}
+/* NEW ARRIVAL */
+/* new arrival */
+
+#firstsection {
+    width: 100%;
+    height: auto;
+    color: black;
+    background-color: #E5DCC8;
+    justify-content: center;
+    text-align: center;
+    font-size: 18px;
+    margin-top: 20px;
+    padding: 20px;
+}
+
+.together {
+    color: white;
+    width: 200px;
+    height: auto;
+    background-color: #bba694;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+
+    font-size: 20px;
+}
+
+.new-banner {
+    position: relative;
+}
+
+.new-banner img {
+    width: 100%;
+    height: 500px;
+    margin: 0;
+    padding: 0;
+    margin-top: 12px;
+    z-index: 100;
+}
+
+.shopnow {
+    border-radius: 5px;
+    border: 2px #E5DCC8 solid;
+    background-color: transparent;
+    color: black;
+    display: flex;
+    position: absolute;
+    top: 70%;
+    left: 60%;
+    transform: translate(-170%, -170%);
+    margin-top: 100px;
+    padding: 10px;
+
+}
+
+.shopnow a {
+    color: black;
+    text-decoration: none;
+}
+
+#newestproducts {
+    background-color: #E5DCC8;
+    width: auto;
+}
+
+.newesttext {
+    text-align: center;
+}
+
+.newestbutton1 {
+    border-radius: 5px;
+    text-decoration: none;
+    border: 3px #A27F61 solid;
+    background-color: transparent;
+    color: black;
+    display: flex;
+    position: absolute;
+    left: 270px;
+    bottom: -450px;
+    font-weight: lighter;
+    padding: 10px;
+   top: 100px;
+
+}
+
+.newestbutton1 a {
+    color: black;
+    text-decoration: none;
+}
+
+.newestbutton2 {
+    border-radius: 5px;
+    text-decoration: none;
+    border: 3px #A27F61 solid;
+    background-color: transparent;
+    color: black;
+    display: flex;
+    position: absolute;
+    left: 1045px;
+    bottom: -450px;
+    font-weight: lighter;
+    padding: 10px;
+
+}
+
+.newestbutton2 a {
+    color: black;
+    text-decoration: none;
 }
