--- a/public/admin-assets/css/dashboard.css
+++ b/public/admin-assets/css/dashboard.css
@@ -681,3 +681,39 @@ background-color: var(--app-bg);
 .shipping-table .shipping-row td,tr,th{
   border: none;
 }
+.dash-card-main{
+border-radius: 20px;
+height: 130px;
+padding: 10px;
+text-align: center;
+    width: 300px !important;
+background-color: var(--sidebar);
+margin-top: 20px;
+margin-left: 20px;
+display: flex;
+flex-direction: row;
+box-shadow: 0 2px 10px 2px #997A5F;
+}
+#card-container{
+margin-top: 50px;
+
+}
+.dash-card-main img{
+width: 100px;
+height:100px;
+
+}
+.text-container{
+margin-left: 20px;
+}
+.text-container h5 {
+margin-top: 20px;
+
+}
+.text-container p{
+margin-top: -2px;
+font-size: 20px;
+text-align: left;
+font-family: 'Times New Roman', Times, serif;
+font-weight: 600;
+}
