--- a/public/admin-assets/css/login.css
+++ b/public/admin-assets/css/login.css
@@ -8,24 +8,31 @@ font-family: 'Inknut Antiqua', serif;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+overflow: hidden;
+}
+.login-heading{
+text-align: center;
 
 }
 
-.screen {		
-	background: linear-gradient(90deg, #997A5F, #C5B19E);		
-	position: relative;	
-	height: 600px;
-	width: 360px;	
+.screen {
+	background: linear-gradient(90deg, #997A5F, #C5B19E);
+	position: relative;
+	height: 550px;
+margin-bottom: 5px;
+margin-top: 15px;
+	width: 360px;
 	box-shadow: 0px 0px 24px #997A5F;
+
 }
 
 .screen__content {
 	z-index: 1;
-	position: relative;	
+	position: relative;
 	height: 100%;
 }
 
-.screen__background {		
+.screen__background {
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -33,7 +40,7 @@ font-family: 'Inknut Antiqua', serif;
 	bottom: 0;
 	z-index: 0;
 	-webkit-clip-path: inset(0 0 0 0);
-	clip-path: inset(0 0 0 0);	
+	clip-path: inset(0 0 0 0);
 }
 
 .screen__background__shape {
@@ -44,18 +51,18 @@ font-family: 'Inknut Antiqua', serif;
 .screen__background__shape1 {
 	height: 520px;
 	width: 520px;
-	background: #FFF;	
+	background: #FFF;
 	top: -50px;
-	right: 120px;	
+	right: 120px;
 	border-radius: 0 72px 0 0;
 }
 
 .screen__background__shape2 {
 	height: 220px;
 	width: 220px;
-	background: #E5DCC8;	
+	background: #E5DCC8;
 	top: -172px;
-	right: 0;	
+	right: 0;
 	border-radius: 32px;
 }
 
@@ -64,16 +71,16 @@ font-family: 'Inknut Antiqua', serif;
 	width: 190px;
 	background: linear-gradient(270deg, #E5DCC8, #D9D9D9);
 	top: -24px;
-	right: 0;	
+	right: 0;
 	border-radius: 32px;
 }
 
 .screen__background__shape4 {
 	height: 400px;
 	width: 200px;
-	background: #E5DCC8;	
+	background: #E5DCC8;
 	top: 420px;
-	right: 50px;	
+	right: 50px;
 	border-radius: 60px;
 }
 
@@ -81,16 +88,20 @@ font-family: 'Inknut Antiqua', serif;
 	width: 320px;
 	padding: 30px;
 	padding-top: 156px;
+
 }
 
 .login__field {
-	padding: 20px 0px;	
-	position: relative;	
+    top: 20px;
+	padding: 20px 0px;
+	position: relative;
+    left: 20px !important;
 }
 
 .login__icon {
 	position: absolute;
 	top: 40px;
+    left: 20px;
 	color: #997A5F;
 }
 
@@ -99,10 +110,11 @@ font-family: 'Inknut Antiqua', serif;
 	border-bottom: 2px solid #D1D1D4;
 	background: none;
 	padding: 10px;
-	padding-left: 24px;
+	padding-left: 44px;
 	font-weight: 700;
 	width: 75%;
 	transition: .2s;
+
 }
 
 .login__input:active,
@@ -115,19 +127,21 @@ font-family: 'Inknut Antiqua', serif;
 .login__submit {
 	background: #fff;
 	font-size: 14px;
-	margin-top: 30px;
-	padding: 16px 20px;
-	border-radius: 26px;
+	margin-top: 100px;
+	padding: 5px 6px;
+	border-radius: 15px;
 	border: 1px solid #D4D3E8;
 	text-transform: uppercase;
 	font-weight: 700;
-	display: flex;
+
 	align-items: center;
-	width: 100%;
+	width: 50%;
 	color: #000000;
 	box-shadow: 0px 2px 2px #997A5F;
 	cursor: pointer;
 	transition: .2s;
+    margin-left: 90px;
+    text-align: center;
 }
 
 .login__submit:active,
@@ -137,35 +151,4 @@ font-family: 'Inknut Antiqua', serif;
 	outline: none;
 }
 
-.button__icon {
-	font-size: 24px;
-	margin-left: auto;
-	color: #997A5F;
-}
 
-.social-login {	
-	position: absolute;
-	height: 140px;
-	width: 160px;
-	text-align: center;
-	bottom: 0px;
-	right: 0px;
-	color: #000000;
-}
-
-.social-icons {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-
-.social-login__icon {
-	padding: 20px 10px;
-	color: #fff;
-	text-decoration: none;	
-	text-shadow: 0px 0px 8px #C5B19E;
-}
-
-.social-login__icon:hover {
-	transform: scale(1.5);	
-}
