--- a/public/front-assets/style.css
+++ b/public/front-assets/style.css
@@ -127,11 +127,11 @@ footer #footer-bg{
 background-color: #E5DCC8;
 border-top: 1px solid #A27F61;
 
-padding: 20px;
+padding: 10px;
 }
 #bg{
 background-color: #C5B19E;
-margin: 5px;
+margin: 2px;
 text-align: center;
 justify-content: center;
 align-items: center;
@@ -709,7 +709,7 @@ border-radius:10px ;
 
 .new-banner img {
     width: 100%;
-    height: 500px;
+    height: 400px;
     margin: 0;
     padding: 0;
     margin-top: 12px;
@@ -738,10 +738,13 @@ border-radius:10px ;
 
 #newestproducts {
     background-color: #E5DCC8;
-    width: auto;
+    width: 400px;
     height: 500px;
 }
-
+#newestproducts img{
+width: 100%;
+height: 400px;
+}
 .newesttext {
     text-align: center;
 }
